second card on mobile version

--- a/scss/style.css
+++ b/scss/style.css
@@ -17,36 +17,40 @@ body {
 }
 
 .component {
-  padding: 1.5rem;
+  padding: 2rem;
   background-color: #252d37;
   width: 370px;
   margin: auto;
   border-radius: 10px;
 }
 
-.component .image {
+.component__rating {
+  display: none;
+}
+
+.component__rating .image {
   display: inline-block;
 }
 
-.component .image img {
+.component__rating .image img {
   background-color: #2d3843;
   color: #959eac;
   padding: 0.8rem;
   border-radius: 50%;
 }
 
-.component h1 {
+.component__rating .h1 {
   font-weight: 700;
   font-size: 1.5rem;
   margin: 1rem 0;
 }
 
-.component p {
+.component__rating p {
   color: #959eac;
   line-height: 25px;
 }
 
-.component .rating__numbers--container {
+.component__rating .rating__numbers--container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,11 +60,11 @@ body {
   margin: 1.5rem 0;
 }
 
-.component .rating__numbers--container li {
+.component__rating .rating__numbers--container li {
   list-style-type: none;
   background-color: #2d3843;
   color: #959eac;
-  padding: 0.9rem;
+  padding: 1rem;
   border-radius: 50%;
   font-size: 0.8rem;
   font-weight: 700;
@@ -68,7 +72,7 @@ body {
       justify-self: center;
 }
 
-.component .button {
+.component__rating .button {
   background-color: #fb7413;
   padding: 1rem;
   border-radius: 25px;
@@ -80,6 +84,30 @@ body {
 }
 
 .component__thankYou {
-  display: none;
+  text-align: center;
+}
+
+.component__thankYou .image--container {
+  margin-bottom: 0.5rem;
+}
+
+.component__thankYou .selected__text {
+  display: inline-block;
+  margin: 1rem 0;
+  background-color: #2d3843;
+  color: #fb7413;
+  padding: 0.5rem 0.8rem;
+  border-radius: 25px;
+}
+
+.component__thankYou h1 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+
+.component__thankYou p {
+  color: #959eac;
+  line-height: 20px;
 }
 /*# sourceMappingURL=style.css.map */
