--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,7 @@ body{
     border-radius: 10px;
 
     &__rating{
-        display: none;
+
         .image{
             display: inline-block;
     
@@ -37,7 +37,7 @@ body{
             }
         }
     
-        .h1{
+        h1{
             font-weight: 700;
             font-size: 1.5rem;
             margin: 1rem 0;
@@ -109,6 +109,10 @@ body{
             line-height: 20px;
         }
 
+    }
+
+    .hidden{
+        display: none;
     }
 }
 
